--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                             <p><img id="checkpass" src="image/check1.jpg" onclick="checkp()" alt=""><label style="position: absolute;">Hiển thị mật khẩu</label></p>
                         </div>
                         <input type="submit" value="Đăng Ký" name="dangky" id="dangky" style="margin-left: 25px;">
+                        <a href="login.php">Đăng nhập</a>
                     </form>
                 </div>
             </div>
